* Updated Dutch translation (Frans S and Erik H)
* New returns-specific logic (see release notes) (Chris T)
* Fixed bug 1262, cannot post overpayment with formatted nums (Chris T)
* Fixed bug 1263, error when control_code not filled in (chris T)
* Fixed update button not showing after save (Chris T)
* Fixed bug 1260, Multiple vendor skus breaks display of invoice (Chris T)

Pongracz I is Pongracz Istvan
Chris T is Chris Travers
Frans S is Frans van der Star
Erik H is Erik Huelsmann

Changelog for 1.4.5
* Fixed bug 1245, print and email buttons lost after email invoice (Chris T)
* Fixed bug 1246, entity-level addresses do not show on invoice (Chris T)
* Fixed bug 1244, manually entered tax crashes invoice on edit (Chris T)
* Fixed bug 1253, report pdfs redirect to port 80 (Chris T)
* Fixed internal server error on single payment interface (Chris T)
* Adding tax_id hidden field to order and offer forms to be able to include it on tex templates (Pongracz I)
* Fixed bug 1195, goods and services w/invoice search useless (Chris T)
* Fixed bug 1247, cannot save shipping record (Chris T)
* Fixed bug 1255, no such function timecard__report (Chris T)
* Fixed bug 1256, No such function: inventory_get_item_at_day (Chris T)

Chris T is Chris Travers
Pongracz I is Pongracz Istvan

Changelog for 1.4.4
* Fixed bug 1225 error saving order/quote for natural persons (Chris T)
* Fixed bug 1235, natural persons' orders not on report (Chris T)
* Fixed bug, insufficient perms on account_checkpoint_id_seq (Chris T)
* Fixed bug 1238, web services do not run on starman (Chris T)
* Fixed bug 1233, insufficient error handling with templates (Chris T)
* Added Product Receipt templates for printing vendor invoices (Chris T)
* (Bug Report 1229), added ID card and birthdate tracking (Chris T)
* Fixed bug 1234, trying to save user before employee thows error (Chris T)
* Fixed bug 1239, reopening on previous close throws error (Chris T)